<resources>
    <string name="app_name">Saferoute</string>
    <string name="site_app">www.saferoute.me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="alert_connection">Sem Conexão!</string>
    <string name="OK_Text">OK</string>

    <!-- Menu Drawer View-->
    <string name="nav_logar">Logar</string>
    <string name="nav_logado">Encerrar Sessão</string>

    <string name="nav_fui_roubado">Fui Roubado</string>
    <string name="nav_suas_ocorrencias">Suas Ocorrencias</string>
    <string name="nav_personal">Local Atual</string>
    <string name="nav_home">Marcador</string>
    <string name="nav_dicas">Dicas de Segurança</string>
    <string name="nav_privacidade">Politicas de Privacidade</string>
    <string name="nav_sobre">Sobre</string>

    <!-- Mapa -->

    <string name="btn_mapa_confirma_posição">Confirmar Posição</string>

    <!-- Cadastro Dialog -->
    <string name="cadastro_titulo">Cadastro</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_senha">Senha de 6 ou mais caracteres</string>
    <string name="cadastro_senhaR">Senha novamente</string>
    <string name="cadastro_genero">Genero:</string>
    <string name="cadastro_data_nasc">Data de Nascimento: </string>
    <string name="cadastro_cadastrar">Cadastrar</string>
    <string-array name="cadastro_M_F">
        <item>M</item>
        <item>F</item>
    </string-array>

    <!-- Login Dialog -->
    <string name="login_login">Login</string>
    <string name="login_email">Email </string>
    <string name="login_senha">Senha </string>
    <string name="login_logar">Logar</string>
    <string name="login_cadastrar">Não está cadastrado? Cadastre-se!</string>

    <!-- Ocorrencia Dialog -->
    <string name="ocorrencia_titulo">Dados da Ocorrência</string>
    <string name="ocorrencia_dia">Dia: </string>
    <string name="ocorrencia_hora">Hora: </string>
    <string name="ocorrencia_tipo">Tipo: </string>
    <string-array name="ocorrencia_tipos">
        <item>Assalto</item>
        <item>Assalto a mão armada</item>
        <item>Furto</item>
    </string-array>
    <string name="ocorrencia_pertences">Pretences: </string>
    <string name="ocorrencia_boletim">Fez Boletim? </string>
    <string name="ocorrencia_agrecao">Teve Agreção? </string>
    <string name="ocorrencia_complemento">Complemento: </string>
    <string-array name="ocorrencia_yes_no">
        <item>Sim</item>
        <item>Não</item>
    </string-array>
    <string name="ocorrencia_registrar">Registrar</string>
    <string name="ocorrencia_atualizar">Atualizar</string>

    <!-- Ocorrencia Lista Dialog -->
    <string name="ocorrencia_editar">Editar</string>
    <string name="ocorrencia_excluir">Excluir</string>


    <!-- Select Pertences -->
    <string name="select_dinheiro">dinheiro</string>
    <string name="select_celular">celular</string>
    <string name="select_veiculo">veiculo</string>
    <string name="select_cartao">cartao</string>
    <string name="select_carteira">carteira</string>
    <string name="select_bolsa">bolsa</string>
    <string name="select_bicicleta">bicicleta</string>
    <string name="select_documentos">documentos</string>
    <string name="select_outros">outros</string>

    <!-- more info window ocorrencia -->
    <string name="info_window_agracao_sim">-Houve agreção</string>
    <string name="info_window_agracao_nao">-Não houve agreção</string>

    <string name="info_window_boletim_sim">-Foi feito boletim</string>
    <string name="info_window_boletim_nao">-Não foi feito boletim</string>
</resources>
