<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/select_img_margin"
    android:layout_marginBottom="@dimen/select_img_margin"
    android:padding="@dimen/select_img_paddin"
    android:background="@drawable/border_edittext">

    <ImageView
        android:id="@+id/select_img_dinheiro"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_money"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/select_txt_dinheiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_dinheiro"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_dinheiro"
        android:layout_alignBottom="@id/select_img_dinheiro"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_celular"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_cel"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_dinheiro"/>
    <TextView
        android:id="@+id/select_txt_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_celular"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_celular"
        android:layout_alignBottom="@id/select_img_celular"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_veiculo"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_veiculo"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_celular"/>
    <TextView
        android:id="@+id/select_txt_veiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_veiculo"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_veiculo"
        android:layout_alignBottom="@id/select_img_veiculo"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_cartao"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_cartao"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_veiculo"/>
    <TextView
        android:id="@+id/select_txt_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_cartao"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_cartao"
        android:layout_alignBottom="@id/select_img_cartao"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_carteira"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_carteira"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_cartao"/>
    <TextView
        android:id="@+id/select_txt_carteira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_carteira"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_carteira"
        android:layout_alignBottom="@id/select_img_carteira"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_bolsa"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_mochila"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_carteira"/>
    <TextView
        android:id="@+id/select_txt_bolsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_bolsa"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_bolsa"
        android:layout_alignBottom="@id/select_img_bolsa"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_bicicleta"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_bicicleta"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_bolsa"/>
    <TextView
        android:id="@+id/select_txt_bicicleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_bicicleta"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_bicicleta"
        android:layout_alignBottom="@id/select_img_bicicleta"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_documentos"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_documento"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_bicicleta"/>
    <TextView
        android:id="@+id/select_txt_documentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_documentos"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_documentos"
        android:layout_alignBottom="@id/select_img_documentos"
        android:textColor="@color/txt_color_black"/>

    <ImageView
        android:id="@+id/select_img_outros"
        android:layout_width="@dimen/select_img_dimen"
        android:layout_height="@dimen/select_img_dimen"
        android:src="@drawable/ic_plus"
        android:padding="@dimen/select_img_paddin"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/select_img_documentos"/>
    <TextView
        android:id="@+id/select_txt_outros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_outros"
        android:textSize="@dimen/select_img_text"
        android:layout_toEndOf="@+id/select_img_outros"
        android:layout_alignBottom="@id/select_img_outros"
        android:textColor="@color/txt_color_black"/>

</RelativeLayout>